// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClusterDetailCounter renders a counter with a pluralized label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ciWjTh"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 ejxtUc"
      >
        <div
          class="RefreshableLabel__Wrapper-sc-1joylxa-0 fqPmNU OptionalValue__StyledRefreshableLabel-sc-8k6d37-0 dmHtNe"
        >
          <span
            aria-label="35 dogs"
            class="StyledText-sc-1sadyjn-0 jXovLs"
          >
            35
          </span>
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 dlJGay ClusterDetailCounter__Label-sc-qai318-0 fcLcIK"
      >
        dogs
      </span>
    </div>
  </div>
</div>
`;

exports[`ClusterDetailCounter renders a simple counter 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 giQQcM"
>
  <div
    class="ThemeProvider__AppWrapper-sc-12xd2cf-0 kuNpSX"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 ciWjTh"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 ejxtUc"
      >
        <div
          class="RefreshableLabel__Wrapper-sc-1joylxa-0 fqPmNU OptionalValue__StyledRefreshableLabel-sc-8k6d37-0 dmHtNe"
        >
          <span
            aria-label="1 dog"
            class="StyledText-sc-1sadyjn-0 jXovLs"
          >
            1
          </span>
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 dlJGay ClusterDetailCounter__Label-sc-qai318-0 fcLcIK"
      >
        dog
      </span>
    </div>
  </div>
</div>
`;
